# codex-notify

./: .gitignore  README.md  main.py  notify-hook-tokens.example.toml  notify-hook.py  pyproject.toml
tests/: test_main.py  test_notify_hook.py
