[project]
name = "codex-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "inquirer>=3.4.1",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
codex-notify = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "notify-hook.py"]
