[project]
name = "codex-notify"
version = "0.1.0"
description = "One-way Telegram notifier for OpenAI Codex CLI completion events."
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "tomlkit>=0.13.3",
    "tomli>=2.0.1; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
codex-notify = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "notify-hook.py", "notify-hook-tokens.example.toml"]
